--- a/task4/rally.html
+++ b/task4/rally.html
@@ -10,55 +10,37 @@
     <link rel="stylesheet" href="tail.css" />
   </head>
   <body>
-    <header class="bg-red-600 text-white p-5 mb-5">
+    <header class="my-header">
       <h1 id="title">Formuła 1 i nie tylko...</h1>
       <nav>
         <ul
           class="menu flex justify-center items-center list-none p-0 my-2 transition-opacity duration-700"
         >
           <li class="mx-2">
-            <a href="index.html" class="text-white no-underline font-bold hover:underline"
-              >Historia Formuły 1</a
-            >
+            <a href="index.html" class="my-nav-link">Historia Formuły 1</a>
           </li>
           <li class="mx-2">
-            <a href="hall_of_fame.html" class="text-white no-underline font-bold hover:underline"
-              >Galeria sław</a
-            >
+            <a href="hall_of_fame.html" class="my-nav-link">Galeria sław</a>
           </li>
           <li class="mx-2">
-            <a href="rally.html" class="text-white no-underline font-bold hover:underline"
-              >Sekcja rajdowa</a
-            >
+            <a href="rally.html" class="my-nav-link">Sekcja rajdowa</a>
           </li>
         </ul>
         <!-- Justification control buttons -->
         <div class="flex flex-row mt-2 text-center justify-evenly">
-          <button
-            type="button"
-            onclick="justifyMenu('flex-start')"
-            class="flex-auto bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 hover:cursor-pointer"
-          >
+          <button type="button" onclick="justifyMenu('flex-start')" class="my-just-button">
             Left
           </button>
-          <button
-            type="button"
-            onclick="justifyMenu('center')"
-            class="flex-auto bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 cursor-pointer"
-          >
+          <button type="button" onclick="justifyMenu('center')" class="my-just-button">
             Center
           </button>
-          <button
-            type="button"
-            onclick="justifyMenu('flex-end')"
-            class="flex-auto bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 hover:cursor-pointer"
-          >
+          <button type="button" onclick="justifyMenu('flex-end')" class="my-just-button">
             Right
           </button>
           <button
             type="button"
             onclick="justifyMenu('space-between')"
-            class="flex-none bg-white text-red-600 border border-red-600 px-3 py-1 mx-1 rounded transition-colors duration-500 hover:text-gray-700 hover:border-gray-700 hover:cursor-pointer"
+            class="flex-none my-just-button"
           >
             Evenly
           </button>
@@ -92,6 +74,8 @@
           doskonałej znajomości trasy. Zachęcam do obejrzenia poniższych filmów, które przedstawiają
           namiastkę emocji towarzyszących rywalizacji w rajdach.
         </p>
+        <!-- For some strange reason the classess can't be easily migrated to the .css file. Maybe
+        because of the animation -->
         <div
           class="flex flex-col-reverse md:flex-col border-3 border-dashed border-gray-800 rounded-lg p-3"
         >
